--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,8 +15,7 @@
         TeX: { equationNumbers: { autoNumber: "AMS" } }
         });
       </script>
-      <script type="text/javascript" async src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-      <script type="text/javascript" charset="utf-8" 
+      <script type="text/javascript" async charset="utf-8" 
 src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML,
 https://vincenttam.github.io/javascripts/MathJaxLocal.js"></script>
 
